--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "pinar": "^0.12.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-modal": "^13.0.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
